--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,9 +4,7 @@ layout: default
 <!-- Header -->
 			<div id="header">
 				<div class="container">
-
-					<!-- Logo -->
-						<h1><a href="#" id="logo">{{ page.title }}</a></h1>
+          <h1 class='logo'>{{ page.title }}<br>{{ page.title2 }}</h1>
 
 					{% include nav.html %}
 
