--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
+/*@import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");*/
 
 /* Basic */
 
@@ -444,12 +444,13 @@
 
 	.wrapper.style1 {
 		background: #fff;
+		padding: 3em 0;
 	}
 
 	.wrapper.style2 {
 		background: #ececec;
-		padding: 6em 0;
-		text-align: center;
+		padding: 3em 0;
+		text-align: left;
 	}
 
 	.wrapper.style3 {
@@ -500,7 +501,7 @@
 		background-position: center;
 	}
 
-	#logo {
+	.logo {
 		font-size: 2em;
 	}
 
@@ -512,7 +513,7 @@
 			border-radius: 10px 10px 0 0;
 			display: inline-block;
 			margin-left: 0.5em;
-			padding: 0.5em 1.5em;
+			padding: 0.5em 1.0em;
 		}
 
 			#nav > ul > li a {
@@ -603,9 +604,6 @@
 		text-align: center;
 	}
 
-	#main {
-		padding: 6em 0;
-	}
 
 		#main .sidebar .major {
 			padding-bottom: 2em;
@@ -655,3 +653,5 @@
 		#footer a {
 			color: inherit;
 		}
+
+    li.current { font-weight: 700 }
