--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,5 +9,6 @@
       <li {% if current[1] == 'registration.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/registration.html">Registration</a></li>
       <li {% if current[1] == 'venue.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/venue.html">Venue</a></li>
       <li {% if current[1] == 'hotel.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/hotel.html">Hotel</a></li>
+      <li {% if current[1] == 'sponsors.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/sponsors.html">Sponsors</a></li>
 		</ul>
 	</nav>
