--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@
 	}
 
 	p, ul, ol, dl, table, blockquote {
-		margin: 0 0 2em 0;
+		margin: 0 0 1em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -302,7 +302,7 @@
 
 			ul.contact li .address, ul.contact li .mail, ul.contact li .phone {
 				float: left;
-				width: 100px;
+				width: 60px;
 				font-weight: 600;
 			}
 
@@ -503,6 +503,7 @@
 
 	.logo {
 		font-size: 2em;
+        text-shadow: 2px 2px 6px #333;
 	}
 
 	#nav > ul {
@@ -513,13 +514,14 @@
 			border-radius: 10px 10px 0 0;
 			display: inline-block;
 			margin-left: 0.5em;
-			padding: 0.5em 1.0em;
+			padding: 0.5em 0.8em;
 		}
 
 			#nav > ul > li a {
 				color: #FFF;
 				text-decoration: none;
-				font-size: 1.2em;
+				font-size: 1.1em;
+                text-shadow: 1px 1px 3px #222;
 			}
 
 			#nav > ul > li:first-child {
@@ -628,7 +630,7 @@
 /* Footer */
 
 	#footer {
-		padding: 4em 0;
+		padding: 3em 0 2em;
 		color: #fff;
 	}
 
@@ -642,8 +644,8 @@
 		}
 
 		#footer .copyright {
-			margin-top: 3em;
-			padding-top: 3em;
+			margin-top: 2em;
+			padding-top: 2em;
 			border-top: 1px solid;
 			border-color: rgba(192, 192, 192, 0.15);
 			text-align: center;
