--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,47 +33,20 @@
 							<div class="8u">
 								<section>
 									<header class="major">
-										<h2>Donec dictum metus</h2>
-										<span class="byline">Quisque semper augue mattis wisi maecenas ligula</span>
+										<h2>About The CSWNST14 Organizer</h2>
+										<span class="byline">Some introductions about the conference organizer</span>
 									</header>
-									<div class="row">
-										<section class="6u">
-											<ul class="default">
-												<li><a href="#">Pellentesque elit non gravida blandit.</a></li>
-												<li><a href="#">Lorem ipsum dolor consectetuer elit.</a></li>
-												<li><a href="#">Phasellus nibh pellentesque congue.</a></li>
-												<li><a href="#">Cras vitae metus aliquam  pharetra.</a></li>
-											</ul>
-										</section>
-										<section class="6u">
-											<ul class="default">
-												<li><a href="#">Pellentesque elit non gravida blandit.</a></li>
-												<li><a href="#">Lorem ipsum dolor consectetuer elit.</a></li>
-												<li><a href="#">Phasellus nibh pellentesque congue.</a></li>
-												<li><a href="#">Cras vitae metus aliquam  pharetra.</a></li>
-											</ul>
-										</section>
-									</div>
 								</section>
 							</div>
 							<div class="4u">
 								<section>
 									<header class="major">
-										<h2>Donec dictum metus</h2>
-										<span class="byline">Mattis wisi maecenas ligula</span>
+										<h2>Contact Us</h2>
 									</header>
 									<ul class="contact">
 										<li>
-											<span class="address">Address</span>
-											<span>1234 Somewhere Road #4285 <br />Nashville, TN 00000</span>
-										</li>
-										<li>
 											<span class="mail">Mail</span>
-											<span><a href="#">someone@untitled.tld</a></span>
-										</li>
-										<li>
-											<span class="phone">Phone</span>
-											<span>(000) 000-0000</span>
+											<span><a href="mailto:CSWNST14@umac.mo">CSWNST14@umac.mo</a></span>
 										</li>
 									</ul>
 								</section>
@@ -82,8 +55,8 @@
 
 					<!-- Copyright -->
 						<div class="copyright">
-							Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
-							Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a>
+              Copyright @2017 The CSWNST14 Organizer. All rights reserved. 
+							Theme design by <a href="http://cloudcannon.com">Cloud Cannon</a>
 						</div>
 
 				</div>
