--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,14 +33,15 @@
 							<div class="8u">
 								<section>
 									<header class="major">
-										<h2>About The CSWNST14 Organizer</h2>
-										<span class="byline">Some introductions about the conference organizer</span>
+										<h2>About CSWNST14</h2>
+                    <span class="byline">Organizer: University of Macau; the Physical Society of Macao</span>
+                    <br/><span class="byline">Co-organizer: the City University of Hong Kong</span>
 									</header>
 								</section>
 							</div>
 							<div class="4u">
 								<section>
-									<header class="major">
+									<header style="padding-bottom:1em" class="major">
 										<h2>Contact Us</h2>
 									</header>
 									<ul class="contact">
@@ -55,8 +56,8 @@
 
 					<!-- Copyright -->
 						<div class="copyright">
-              Copyright @2017 The CSWNST14 Organizer. All rights reserved. 
-							Theme design by <a href="http://cloudcannon.com">Cloud Cannon</a>
+              Copyright @2017 University of Macau; the Physical Society of Macao. All rights reserved. 
+              <br/>Jekyll Theme by <a href="http://cloudcannon.com">Cloud Cannon</a>
 						</div>
 
 				</div>
